# sudoku-rs

./: Cargo.toml  README.md  main.rs
data(small)/: arto-inkala-hardest.csv  basic-test.csv  sudoku-wiki-hardest.csv  sudoku17.csv
src/: main.rs  reader.rs  scratch.rs  sudoku.rs  test.rs
src/sudoku/: print.rs  solve.rs
