[package]
name = "sudoku_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
rand = "0.8.5"
tokio = { version = "1.34.0", features = ["time"] }

# https://nnethercote.github.io/perf-book/build-configuration.html
# this is what guided these settings
[profile.release]
debug = false
codegen-units = 1
lto = "fat"
strip = "symbols"
# rustflags = ["-C", "target-cpu=native"]
